Tranfered UPLINK html to this

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-This is a test.
+<!DOCTYPE>
+
+<html lang ="en">
+
+<head> 
+<link rel="shortcut icon" href="favicon.ico"/>
+<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+<title>UPLINK</title>
+
+</head>
+
+<body>
+<style type="text/css">
+body{
+text-align:center;  
+background-image: url("http://i.stack.imgur.com/B83HT.jpg"); 
+color: green;
+font-family: 'Orbitron', sans-serif;  
+}
+marquee{
+    font-size: 300%
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    font-size: 150%
+
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    color: white;
+}
+img{
+    float: none;
+    border-radius: 75px;
+}
+p{
+    font-size: 200%;
+}
+</style>
+
+<h1> Get Connected </h1>
+
+<marquee>Goldman Allstar Gang Final Project</marquee>
+
+<ul>
+  <li><a href="https://allstars-bladebreaker.c9users.io/IDEA.html">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="https://allstars-bladebreaker.c9users.io/Contact.html">Contact</a></li>
+  <li><a href="https://allstars-bladebreaker.c9users.io/About.html">About</a></li>
+</ul>
+
+<img src = "http://az616578.vo.msecnd.net/files/2016/03/17/6359381902950148871947701837_Freshmen.png" width = "700" height = "400">
+<p>"Welcome Newbies"</p>
+
+<br>
+
+<img src = "https://i.ytimg.com/vi/BtmkOolYu3E/maxresdefault.jpg" width = "700" height = "400">
+<p>"Here for returning guys and gals"</p>
+
+<audio loop="loop" autoplay="autoplay" controls="controls">  
+   <source src="Freedom.ogg"/>  
+   <source src="Freedom.mp3"/>  
+</audio>
+
+</body>
+</html>
