--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ p{
 <marquee>Goldman Allstar Gang Final Project</marquee>
 
 <ul>
-  <li><a href="https://allstars-bladebreaker.c9users.io/IDEA.html">Home</a></li>
+  <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/UPLINK.html">Home</a></li>
   <li><a href="#news">News</a></li>
-  <li><a href="https://allstars-bladebreaker.c9users.io/Contact.html">Contact</a></li>
-  <li><a href="https://allstars-bladebreaker.c9users.io/About.html">About</a></li>
+  <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/Contact.html">Contact</a></li>
+  <li><a href="hfile:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/About.html">About</a></li>
 </ul>
 
 <img src = "http://az616578.vo.msecnd.net/files/2016/03/17/6359381902950148871947701837_Freshmen.png" width = "700" height = "400">
