--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p{
   <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/UPLINK.html">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/Contact.html">Contact</a></li>
-  <li><a href="hfile:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/About.html">About</a></li>
+  <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/About.html">About</a></li>
 </ul>
 
 <img src = "http://az616578.vo.msecnd.net/files/2016/03/17/6359381902950148871947701837_Freshmen.png" width = "700" height = "400">
