--- a/About.html
+++ b/About.html
@@ -46,7 +46,7 @@ li a:hover {
 <h1>ABOUT YA BOY AND HIS WEBSITE</h1>    
 
 <ul>
-  <li><a href="https://allstars-bladebreaker.c9users.io/IDEA.html">Home</a></li>
+  <li><a href="https://jcajusteasc.github.io/">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="https://allstars-bladebreaker.c9users.io/Contact.html">Contact</a></li>
   <li><a href="https://allstars-bladebreaker.c9users.io/About.html">About</a></li>
