--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ p{
 <marquee>Goldman Allstar Gang Final Project</marquee>
 
 <ul>
-  <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/UPLINK.html">Home</a></li>
+  <li><a href="https://jcajusteasc.github.io/">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/Contact.html">Contact</a></li>
   <li><a href="file:///C:/Users/Jonathan%20Estrella/Desktop/AllStarCode/About.html">About</a></li>
